--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<version>0.11.5</version>
 		</dependency>
 		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.37.0</version> <!-- Vérifiez la dernière version sur Maven Central -->
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
